fix slider position on mobile

--- a/css/akchardetail.css
+++ b/css/akchardetail.css
@@ -539,8 +539,8 @@ body {
         -webkit-appearance: none;  /* Override default CSS styles */
         appearance: none;
         position: absolute;
-        right: -65px !important;
-        top:215px;
+        right: -64px !important;
+        top:220px;
         width: 170px;
         display: inline-block;
         line-height: 0px;
